# cityfit-ai

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app copy.py  streamlit_app.py
data/knowledge_base/: cityfit_methodology.md  data_limitations.md  quality_of_life_index_notes.md  relocation_risk_framework.md  (+1 more)
docs/: lifestyle_metrics_plan.md
notebooks/: 01_ingest_bronze.py  02_clean_silver.py  03_feature_engineering_gold.py  04_train_ranking_model.py
scripts/: add_lat_long_to_city_dataset.py  add_region_to_city_dataset.py  init_lifestyle_metrics.py  run_cityfit_ranking.py  update_airport_scores.py  update_cityfit_rank.py  update_culture_scores.py  update_daily_life_scores.py  update_food_scene_scores.py  update_land_area_estimates.py  update_lifestyle_scores.py  update_nightlife_scores.py  update_outdoors_scores.py  update_pace_of_life.py  update_transit_scores.py
tests/: test_agent.py  test_agent_provider_mode.py  test_airport_scoring.py  test_api.py  test_city_comparison.py  test_culture_scoring.py  test_daily_life_scoring.py  test_filters.py  test_fit_blending.py  test_food_scene_scoring.py  test_globe_chart.py  test_land_area.py  test_lifestyle_metrics.py  test_lifestyle_scoring.py  test_llm_provider.py  test_nightlife_scoring.py  test_outdoors_scoring.py  test_pace_scoring.py  test_rag.py  test_recommendations.py  test_scoring.py  test_transformations.py  test_transit_scoring.py  test_validation.py
(+75 files in other folders)
