[project]
name = "cityfit-ai"
version = "0.1.0"
description = "Personalized city recommendation system using cost of living and quality of life data."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"